regression/fail/tyvar-scope.3.sml
val _ =
   fn () =>
   let
      exception E of 'a
      val 'a f = fn z => z
   in
      ()
   end
